8 - Hello world and Redis/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-http
  labels:
    app: hello-http
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: hello-http-pod
